# OrchEval

./: .gitignore  README.md  pyproject.toml
examples/: README.md  compare_two_runs.py  cross_run_analysis.py  diagnose_bad_architecture.py  quickstart_manual.py
src/orcheval/: README.md  __init__.py  _io.py  collection.py  digest.py  events.py  mermaid.py  sanitize.py  trace.py  visualization.py
src/orcheval/adapters/: README.md  __init__.py  base.py  langgraph.py  manual.py  openai_agents.py
src/orcheval/assertions/: __init__.py
src/orcheval/export/: __init__.py  dataframe.py  digest.py  mermaid.py  visualization.css  visualization.js  visualization.py
src/orcheval/report/: README.md  __init__.py  comparison.py  convergence.py  cost.py  llm_patterns.py  retries.py  routing.py  timeline.py
tests/: README.md  conftest.py  test_collection.py  test_dataframe.py  test_digest.py  test_events.py  test_langgraph_adapter.py  test_langgraph_nesting.py  test_manual_adapter.py  test_mermaid.py  test_openai_agents_adapter.py  test_report_comparison.py  test_report_convergence.py  test_report_cost.py  test_report_init.py  test_report_llm_patterns.py  test_report_retries.py  test_report_routing.py  test_report_timeline.py  test_sanitize.py  test_trace.py  test_tracer.py  test_visualization.py
