[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orcheval"
version = "0.1.0"
description = "Evaluations for multi-agent and swarm-based orchestrations."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "OrchEval Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
openai_agents = [
    "openai-agents>=0.0.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orcheval"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
# Inline JS/HTML strings cannot respect Python line-length limits
"src/orcheval/visualization.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["orcheval"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["langchain_core.*", "langgraph.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["agents.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: marks tests requiring optional dependencies (langgraph, openai_agents)",
]
